# Proxy-based-load-balancer

./: Readme.md  compose.override.yml  compose.yml
.github/workflows/: prod.yml
load_balancer/: Cargo.toml  Dockerfile
load_balancer/resources/: config.yaml
load_balancer/src/: lib.rs  main.rs
load_balancer/src/middleware/: logger.rs
load_balancer/src/services/: load_balancer.rs  load_balancer_state.rs  load_balancer_strategy.rs  mod.rs
load_balancer/src/services/strategies/: ewma.rs  least_connections.rs  mod.rs  round_robin.rs
load_balancer/src/utils/: configuration.rs  constants.rs  mod.rs
load_tests/: latency_percentiles.js  long_connections.js  plot.py
nginx/: nginx.conf
resources/: config.yaml
worker/: Cargo.toml  Dockerfile  Readme.md
worker/src/: main.rs
