[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
color-eyre = "0.6.5"
http-body-util = "0.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
