[package]
name = "load_balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
color-eyre = "0.6.5"
http-body-util = "0.1"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
